<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/meeting_delete_button_meeting_list"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_brightness_1_red_200_24dp" />

    <TextView
        android:id="@+id/participants_email_meeting_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:maxLines="1"
...
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/meeting_name_meeting_list" />

    <TextView
        android:id="@+id/meeting_name_meeting_list"
        android:layout_width="104dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
...
        android:textSize="@dimen/normal"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dash1"
        app:layout_constraintTop_toTopOf="@+id/dash1" />

    <TextView
        android:id="@+id/room_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Guzzler13"
...
