...
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.list.MeetingListActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/list_meetings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
...
